<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/settings"
          android:title="@string/settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/Exit"
          android:title="@string/Exit"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/introduction"
          android:title="@string/introduction"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/hist"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"
          android:icon="@drawable/historybar2"
          android:title=""/>
    <item android:id="@+id/live_identify"
          android:title="@string/live_identify"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>

</menu>
